DataManagement/static/DataManagement/ImportCSV.css
.output, .tableInput {
	font-family: sans-serif;
	font-size: 10pt;
	background: white; 
	width: 100pt;
	height: 16pt;
	overflow: hidden;
	padding-left: 5pt;
}
.tableInput { 
	border: none;
}
.output { 
	background: white;
	pointer-events: none;
	text-align: left;
}
.dataTable { 
	border: 1px solid #000;
	border-collapse: collapse;
}
.dataRow {}
.dataRow > td { 
	height: 16pt;
	border: 1px solid #000; 
}
.column-label, .row-label {
	text-align: center;
	background: #EEE;
	}
.row-label { width: 100pt; cursor: pointer;}
.selected {
	background: blue;
}
.progress {
	display: inline-block;
	width: 100px;	
	border: 3px groove #CCC;
}

.progress div {
	font-size: smaller;
	background: orange;
	width: 0pt;
}

.noselect {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

